--- a/ESP32_BLE_Demo-master/app/src/main/res/layout/activity_threshold.xml
+++ b/ESP32_BLE_Demo-master/app/src/main/res/layout/activity_threshold.xml
@@ -300,7 +300,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:text="0"/>
         </LinearLayout>
 
         <RelativeLayout
